Optional fields, and small spacing fix

--- a/app/assets/stylesheets/surveys.scss
+++ b/app/assets/stylesheets/surveys.scss
@@ -2,6 +2,10 @@ button.remove-survey-field {
     margin-top: 25px;
 }
 
+.required-survey-field-checkbox {
+    margin-top: 20px;
+}
+
 hr.survey-field-separator {
     border-color: #999;
 }
